--- a/src/components/MyNavbar.css
+++ b/src/components/MyNavbar.css
@@ -1,5 +1,5 @@
 .navbar{
-    backdrop-filter: saturate(180%) blur(5px);
+    backdrop-filter: saturate(180%) blur(3px);
     box-shadow:0 0 1.25rem rgba(0,0,0,0.25);
     border-bottom: 1px solid rgba(255,255,255,0.1)
 }
